# slicepp

./: .cproject  .cproject.orig  .directory  .gitignore  .gitignore~  CMakeLists.txt  CMakeLists.txt~  README.md  cmake_install.cmake  config.json  perf.data  perf.data.old  setup.py  setup.py~  test.json~  wisdom3.txt
.codelite/: qstem.session  qstem.workspace.philipp  refactoring.db
.kdev4/: QSTEM.kdev4
Examples/: .directory  Al.cfg  Al.cfg~  Au_Al2O3.cfg  Pt.cfg  Pt_cube.cfg  Pt_cube.gbm  Si.cfg  Si3N4.cfg  Si_hole.cfg  Si_hole.gbm  Si_hole.gbm~  Ti5Si3.cfg  ZnO.cfg  alloyTestSuperCellGenerator.gbm  gb_Sigma17.gbm  stem_Si3N4_10nm.qsc  stem_Si3N4_linescan.qsc  stem_probetest.qsc  tem_gb_Sigma17_4.qsc  view1.cif
GUI_Matlab/: rotateZoneAxis.m
GUI_Qt/: microscope.ui.autosave
GUI_new/: .project  window.py  window.py.orig  window.py~  wisdom3.txt
cmake/: .directory
doc/: Doxyfile  Makefile  make.bat  makedoc.sh
exe/: Bootstrapper.cpp  Bootstrapper.hpp  CMakeLists.txt  slicepp.cpp  stem3.project
gbmaker/: Makefile  cmake_install.cmake  gbmaker.cpp
hdf5boost/: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  hdf5boost.project  hdfboosttest  main.cpp  test.h5
hdf5boost/lib/: CMakeLists.txt  CMakeLists.txt~  HDFFile.cpp  HDFFile.hpp  Makefile  cmake_install.cmake  hdfboost.project
lib/: Aberrations.cpp  Aberrations.hpp  Bootstrapper.cpp  Bootstrapper.hpp  CMakeLists.txt  Complex.hpp  Scan.cpp  Scan.hpp  afhelpers.cpp  afhelpers.hpp  elTable.hpp  exported.cpp  exported.hpp  fileio_fftw3.cpp  fileio_fftw3.hpp  matrixlib.cpp  matrixlib.hpp  qh5.cpp  qh5.cpp_  qh5.hpp  random.hpp  readparams.cpp  stemtypes_fftw3.hpp
lib/config_IO/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.hpp  configs.cpp  configs.hpp
lib/data_IO/: PersistenceManager.cpp  PersistenceManager.hpp
lib/detectors/: DirectDetector.cpp  DirectDetector.hpp  FlatAreaDetector.cpp  FlatAreaDetector.hpp  NoiselessDetector.cpp  NoiselessDetector.hpp  ScintillatorDetector.cpp  ScintillatorDetector.hpp  detector_interface.hpp
lib/experiments/: CoherentCBED.cpp  CoherentCBED.hpp  CoherentScanningExperiment.cpp  CoherentScanningExperiment.hpp  CoherentSinglePositionExperiment.cpp  CoherentSinglePositionExperiment.hpp  CoherentTEM.cpp  CoherentTEM.hpp  Ptychograph.cpp  Ptychograph.hpp  base.cpp  base.hpp  experiment_interface.hpp
lib/potentials/: CMakeLists.txt  CUDA2DPotential.cpp  CUDA2DPotential.hpp  CUDAFunctions.cu  CUDAFunctions.cu.orig  CUDAFunctions.hpp  RealSpacePotential.cpp  RealSpacePotential.hpp  SliceBySliceCUDA2DPotential.cpp  SliceBySliceCUDA2DPotential.hpp  pot_2d.cpp  pot_2d.hpp  pot_2d_fft.cpp  pot_2d_fft.cpp.orig  pot_2d_fft.hpp  pot_3d.cpp  pot_3d.hpp  pot_3d_fft.cpp  pot_3d_fft.hpp  pot_base.cpp  pot_base.cpp.orig  pot_base.hpp  pot_base.hpp.orig  pot_interface.hpp  pot_interface.hpp.orig  projectedPotential.cu  projectedPotential.hpp  scatfactsRez.hpp
lib/structure_IO/: CMakeLists.txt  CifReader.cpp  CifReader.hpp  IStructureBuilder.cpp  IStructureBuilder.hpp  PdbReader.cpp  PdbReader.hpp  SuperstructureBuilder.cpp  SuperstructureBuilder.hpp  cfg.cpp  cfg.hpp  crystal.cpp  crystal.hpp  structureInterface.hpp
lib/wavefunctions/: wave_base.cpp  wave_base.cpp.orig  wave_base.hpp  wave_convergent.cpp  wave_convergent.hpp  wave_interface.hpp  wave_plane.cpp  wave_plane.hpp
libs/: CMakeLists.txt  CMakeLists.txt~  Complex.hpp  IFFTEngine.hpp  Makefile  Scan.cpp  Scan.hpp  cmake_install.cmake  cmult-sse2.hpp  convolution.cpp  convolution.hpp  data_containers.cpp_  detectors.cpp  detectors.hpp  fftw++.cpp  fftw++.hpp  fftw_allocator.hpp  fileio_fftw3.cpp  logging.cpp~  matrixlib.cpp  matrixlib.hpp  profiny.hpp  random.hpp  readparams.hpp  stemtypes_fftw3.hpp  stemtypes_fftw3.hpp.orig
libs/config_IO/: ScannedParameter.cpp  ScannedParameter.hpp  config_interface.hpp  config_reader_factory.cpp  configs.cpp  configs.hpp  read_interface.hpp  read_qsc.cpp  read_qsc.hpp  read_qsc.hpp.orig
libs/data_IO/: CMakeLists.txt  PersistenceManager.cpp  PersistenceManager.hpp
libs/detectors/: CMakeLists.txt  FlatAreaDetector.cpp  FlatAreaDetector.hpp  detector_interface.hpp
libs/experiments/: .base.cpp.kate-swp  CoherentCBED.cpp  CoherentCBED.hpp  CoherentSinglePositionExperiment.cpp  CoherentSinglePositionExperiment.hpp  CoherentTEM.cpp  CoherentTEM.hpp  Ptychograph.cpp  Ptychograph.hpp  base.cpp  base.hpp  cbed.cpp  cbed.hpp  stem.cpp  stem.hpp  tem.cpp  tem.hpp
libs/potentials/: CMakeLists.txt  CUDA2DPotential.cpp  CUDA2DPotential.cu  CUDA2DPotential.hpp  CUDAFunctions.cu  CUDAFunctions.hpp  CoordinateArithmetics.hpp  README.txt  RealSpacePotential.cpp  RealSpacePotential.hpp  pot_2d.cpp  pot_2d.hpp  pot_2d_fft.cpp  pot_2d_fft.cpp.orig  pot_2d_fft.hpp  pot_3d.cpp  pot_3d.hpp  pot_3d_fft.cpp  pot_3d_fft.hpp  pot_base.cpp  pot_base.cpp.orig  pot_base.hpp  pot_base.hpp.orig  pot_factory.cpp  pot_factory.hpp  pot_interface.hpp  projectedPotential.cu  projectedPotential.hpp
libs/structure_IO/: CifReader.cpp  CifReader.hpp  IStructureBuilder.cpp  IStructureBuilder.hpp  SuperstructureBuilder.cpp  SuperstructureBuilder.hpp  cfg.cpp  cfg.hpp  crystal.cpp  crystal.cpp.orig  crystal.hpp  structureInterface.hpp  structure_factories.cpp  structure_factories.hpp
libs/wavefunctions/: wave_base.cpp  wave_base.hpp  wave_convergent.cpp  wave_convergent.hpp  wave_factory.cpp  wave_factory.hpp  wave_interface.hpp  wave_plane.cpp  wave_plane.hpp
pthreads_w32/: README.txt
python/: .directory
qscRg12/: Makefile  cmake_install.cmake  qscRg12Readme.txt
sliceth/: .project  CMakeLists.txt  config.h  config.hpp  config.lua  configbuilder.lua  detectors.lua  init.lua  lib.cpp  lib.h  runner.lua  sliceFFI.lua  sliceth-scm-1.rockspec  sliceth.hpp  vectors.lua
sliceth/test/: test.lua
stem3/: Bootstrapper.cpp  Bootstrapper.hpp  CMakeLists.txt  Makefile  cmake_install.cmake  stem3.cpp  stem3.kdevelop  stem3.kdevelop.filelist  stem3.kdevses
test_bin/: test_libs
tests/: Makefile  tests.kdevelop  tests.kdevelop.filelist
validation/: .directory  7.11 001 si3n4 exit wave  (+10 more)
(+94 files in other folders)
