CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)
SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../cmake ${CMAKE_MODULE_PATH})

FIND_PACKAGE(Torch REQUIRED)
IF(NOT CUDA_FOUND)
  FIND_PACKAGE(CUDA 5.5 REQUIRED)
ENDIF()

SET(hdr config.h)
SET(src lib.cpp)
SET(src ${src} ${hdr})
ADD_LIBRARY(sliceth SHARED ${src})

TARGET_LINK_LIBRARIES(sliceth qstem THZC)

SET(CMAKE_INSTALL_PREFIX ${SAVED_CMAKE_INSTALL_PREFIX})

INCLUDE_DIRECTORIES(${TH_INCLUDE_PATH} ${TH_INCLUDE_PATH}/TH ${TH_INCLUDE_PATH}/THC)
LINK_DIRECTORIES(${TH_LIB_PATH})

INSTALL(TARGETS sliceth
DESTINATION "${ROCKS_LIBDIR}/sliceth")

INSTALL(DIRECTORY "sliceth"
        DESTINATION "${ROCKS_LUADIR}"
        FILES_MATCHING
        PATTERN "*.lua")

INSTALL(FILES
        config.h
        DESTINATION "${Torch_INSTALL_INCLUDE_SUBDIR}/sliceth")
